--- a/template-ios-main.conf
+++ b/template-ios-main.conf
@@ -2,7 +2,7 @@
 # AUTHOR: Oleg Panteleev
 # DESCRIPTION: all traffic through the provider, except those in the list
 # REPO: https://github.com/slave-of-television/shadowrocket-config
-## DEEPLINK: shadowrocket://config/add/https://drive.google.com/file/d/1DQCDdp5GAr34nly0QX0fpyhR7NOzF7FG/view?usp=share_link
+## DEEPLINK: shadowrocket://config/add/https://raw.githubusercontent.com/slave-of-television/shadowrocket-config/main/template-ios-main.conf
 # UPDATED: 29-09-2024 11:44:01
  
 [General]
@@ -12,11 +12,11 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 dns-server = https://dns.quad9.net/dns-query, https://dns.cloudflare.com/dns-query, https://dns.adguard.com/dns-query
 fallback-dns-server = system, 9.9.9.9
 
-update-url = https://drive.google.com/file/d/1DQCDdp5GAr34nly0QX0fpyhR7NOzF7FG/view?usp=share_link
+update-url = https://raw.githubusercontent.com/slave-of-television/shadowrocket-config/main/template-ios-main.conf
 
 [Rule]
-RULE-SET,https://drive.google.com/file/d/1VqTJ0WQ4RdFQdB419oTddouPmP8XIPin/view?usp=share_link,PROXY # Antifilter Community List
-RULE-SET,https://drive.google.com/file/d/1jeSAnwA5s-pun4xtTJEsx3qwPcSknpmr/view?usp=share_link,PROXY       # Personal list
+RULE-SET,https://raw.githubusercontent.com/slave-of-television/shadowrocket-config/main/antifilter.list,PROXY # Antifilter Community List
+RULE-SET,https://raw.githubusercontent.com/slave-of-television/shadowrocket-config/main/main.list,PROXY      # Personal list
 FINAL,DIRECT
 
 [Host]
